实现torch api docker镜像构建并上传dockerhub

--- a/docker/Dockerfile2
+++ b/docker/Dockerfile2
@@ -1,5 +1,7 @@
-# 使用 Python 3.8 的 slim 版本作为基础镜像
-FROM python:3.8-slim
+# 使用 PyTorch aarch64镜像作为基础
+FROM kumatea/pytorch
+
+# 其他 Docker 指令，例如设置工作目录、复制文件等。
 
 # 设置工作目录
 WORKDIR /app
@@ -18,4 +20,5 @@ ENV FLASK_RUN_HOST=0.0.0.0
 EXPOSE 999
 
 # 运行 Flask 应用
-CMD ["flask", "run", "--port=999"]
+CMD ["python", "/app/torch-backend-api.py"]
+
