--- a/docker/Dockerfile1
+++ b/docker/Dockerfile1
@@ -1,5 +1,5 @@
-# 使用 Python 3.8 的 slim 版本作为基础镜像
-FROM python:3.8-slim
+# 使用 麒麟v10 的 paddle 版本作为基础镜像
+FROM registry.baidubce.com/device/paddle-cpu:kylinv10-aarch64-gcc73
 
 # 设置工作目录
 WORKDIR /app
@@ -7,15 +7,27 @@ WORKDIR /app
 # 将 paddle 文件夹的内容复制到容器的 /app 目录中
 COPY ./paddle /app
 
+# 创建编译目录并编译
+RUN cd /app/Paddle && \
+    mkdir build && cd build && \
+    cmake .. -DPY_VERSION=3 -DPYTHON_EXECUTABLE=`which python3` -DWITH_ARM=ON \
+             -DWITH_TESTING=OFF -DON_INFER=ON -DWITH_XBYAK=OFF \
+             -DCMAKE_CXX_FLAGS="-Wno-error -w" && \
+    make TARGET=ARMV8 -j$(nproc) && \
+    python3 -m pip install -U paddlepaddle-0.0.0-cp37-cp37m-linux_aarch64.whl
+
+# 进行简单功能的健康检查
+RUN python3 -c "import paddle; paddle.utils.run_check()"
+
 # 安装项目所需的依赖
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r /app/requirements.txt
 
 # 设置 Flask 环境变量
-ENV FLASK_APP=back-end-api.py
+ENV FLASK_APP=paddle-backend-api.py
 ENV FLASK_RUN_HOST=0.0.0.0
 
 # 暴露端口 8888
 EXPOSE 888
 
 # 运行 Flask 应用
-CMD ["flask", "run", "--port=888"]
+CMD ["python", "/app/paddle-backend-api.py"]
